# chat-with-stats

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run-dev.sh  run.sh
.githooks/: pre-commit
.github/workflows/: test.yml
backend/: __init__.py  ai_generator.py  api_models.py  api_routes.py  app.py  cache_manager.py  config.py  database_schema.sql  game_api.py  game_details.py  game_tools.py  middleware.py  player_stats_api.py  player_tools.py  possession_calculator.py  prompts.py  query_helpers.py  query_tools.py  response_formatter.py  response_handler.py  retry_utils.py  stats_chat_system.py  stats_processor.py  stats_tool_manager.py  stats_tools.py  stats_utils.py  team_tools.py  tool_executor.py  ufa_event_types.py
backend/api/: game.py  game_box_score.py  player_stats.py  routes.py
backend/core/: ai_generator.py  chat_system.py  tool_executor.py
backend/data/: database.py  possession.py
backend/models/: api.py  db.py
backend/tests/: conftest.py  test_ai_generator.py  test_api_endpoints.py  test_api_routes.py  test_backward_compatibility.py  test_critical_queries.py  test_middleware.py  test_query_helpers.py  test_response_handler.py  test_session_manager.py  test_sql_database.py  test_stats_chat_system.py  test_stats_processor.py  test_stats_tools.py  test_tool_executor.py
backend/tools/: game.py  manager.py  player.py  query.py  team.py
backend/utils/: game.py  query.py  response.py  stats.py  ufa_events.py
frontend/: .eslintrc.json  .gitignore  README.md  REFACTORING_GUIDE.md  chat-ui.css  index.html  main.js  main.ts  package-lock.json  package.json  postcss.config.js  script.js  script.ts  style.css  tsconfig.json  vite.config.js
frontend/components/: header.html  header.js  nav.js
frontend/stats/: game-detail.entry.ts  game-detail.html  game-detail.ts  games.entry.js  (+18 more)
scripts/: backup_database.py  database_setup.py  fix_swapped_scores.py  game_events_verifier.py  generate_types.py  import_status.py  populate_team_standings.py  quality.sh  test_ufa_queries.py  ufa_data_manager.py
(+26 files in other folders)
